@@ -5,6 +5,9 @@ for opt in "$@"; do
     case "$opt" in
         # Fix for -R not working w/apxs
         -R*) WRAPPED_OPTS="$WRAPPED_OPTS -Wl,$opt" ;;
+        # OSF1 compiler option
+        -pthread) WRAPPED_OPTS="$WRAPPED_OPTS -Wc,$opt" ;;
+        # Unwrapped
         *) WRAPPED_OPTS="$WRAPPED_OPTS $opt" ;;
     esac
 done
